# pyensmallen

./: .gitignore  ECONOMETRICS_ML_ROADMAP.md  LICENSE.txt  MANIFEST.in  README.md  benchmark_performance.py  benchmarks.html  compare_r.ipynb  conda-env.yml  estimators.html  example.ipynb  index.html  meson.build  notebooks.html  optimizers.html  pyproject.toml  search.json  setup.py
.github/: changelog-config.json
.github/workflows/: build.yml  changelog.yml  tests.yml
benchmarks/: BENCHMARK_RESULTS.md  benchmark_performance.py  benchmark_results_20250315_205121.json  perf_fig.py
docs/: _quarto.yml  benchmarks.qmd  estimators.qmd  index.qmd  notebooks.qmd  optimizers.qmd  roadmap.qmd  styles.css
docs/notebooks/: autodiff_mnl.ipynb  banana.ipynb  example.ipynb  gmm.ipynb  regularization_comparison.ipynb
notebooks/: autodiff_mnl.html  autodiff_mnl.ipynb  banana.html  banana.ipynb  example.html  example.ipynb  gmm.html  gmm.ipynb  likelihood_comparison.ipynb  likelihood_comparison_estimators.ipynb  regularization_comparison.html  regularization_comparison.ipynb  report.ipynb  synth.ipynb
paper/: benchmark_performance.py  benchmark_results_20250315_203851.json  benchmark_results_20250331_215345.json  paper.bib  paper.md  perf_fig.py  render.sh
pyensmallen/: __init__.py  _pyensmallen.cpp  additional_optimizers.hpp  constrained.hpp  constraints.hpp  estimators.py  first_order.hpp  function_wrapper.hpp  gmm.py  losses.py  meson.build  module.cpp  newton_type.hpp  optimizers.hpp  report.hpp  utils.hpp
reference/: AMSGrad.html  AdaMax.html  Adam.html  EnsmallenEstimator.html  FrankWolfe.html  L_BFGS.html  LinearRegression.html  LogisticRegression.html  Nadam.html  OptimisticAdam.html  PoissonRegression.html  SimplexFrankWolfe.html  index.html  linear_obj.html  logistic_obj.html  poisson_obj.html
scripts/: publish_docs.sh  render_docs.sh
site_libs/bootstrap/: bootstrap.min.css
tests/: test_estimators.py  test_gmm.py  test_mle.py  test_report.py  test_rosenbrock.py
tools/: get_version.py  repair_macos_wheel.py
