[build-system]
requires = [
    "setuptools >=42",
    "wheel",
    "pybind11>=2.4",
    "meson-python",
    "numpy",
    "setuptools-scm",
]
build-backend = "mesonpy"

[tool.cibuildwheel]
skip = ["cp36-*", "*-win32", "*-manylinux_i686"]

[project]
name = 'pyensmallen'
dynamic = ["version"]
description = 'Python bindings for the Ensmallen library.'
readme = 'README.md'
requires-python = '>=3.10'
license = { file = 'LICENSE.txt' }
authors = [
    { name = 'Apoorva Lal', email = 'lal.apoorva@gmail.com' },
    { name = 'Matthew Wardrop', email = 'mpwardrop@gmail.com' },
]

[project.optional-dependencies]
gmm = ["jax", "jaxlib"]

[tool.setuptools_scm]
write_to = "pyensmallen/_version.py"
write_to_template = '__version__ = "{version}"'
# Also write a simple VERSION file for meson
fallback_version = "0.0.0"

